# powerdraw_notifier

./: .gitignore  CLAUDE.md  PowerMonitor.spec  README.md  config.json  generate_icons.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: README.md  ruff.yml  windows-build.yml
build_scripts/: build_linux.sh  build_mac.sh  build_windows.bat
power_monitor/: __init__.py  analyzer.py  config.py  database.py  logger.py  main.py  monitor.py  notifier.py  plotter.py  syncthing_client.py
power_monitor/ui/: __init__.py  plot_window.py  settings_window.py  stats_window.py
